link do ionic icons e pasta assets

--- a/style.css
+++ b/style.css
@@ -12,4 +12,26 @@
 
 body {
     font-size: 1.6rem;
+    background-color: #7c3aed;
+}
+
+#app {
+    display: grid;
+    grid-template-columns: max-content 1fr;
+    min-height: 100vh;
+}
+
+main .inner {
+    height: 100%;
+    background-color: #fbfaff;
+    border-top-left-radius: 3.2rem;
+}
+
+main {
+    padding-top: 0.8rem;
+}
+
+nav {
+    padding: 3.2rem 2.7rem 0 3.5rem;
+    min-width: 11.5rem;
 }
