--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ main .inner {
     height: 100%;
     background-color: #fbfaff;
     border-top-left-radius: 3.2rem;
+    padding: 4.8rem 3.2rem;
 }
 
 main {
@@ -64,4 +65,24 @@ a:hover {
 
 a ion-icon {
     font-size: 2rem;
+}
+
+section.title-avatar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.title-avatar>img {
+    width: 6.4rem;
+    height: 6.4rem;
+    border-radius: 50%;
+}
+
+h1 {
+    display: flex;
+    align-items: center;
+    gap: 1.2rem;
+    font-size: 3.2rem;
+    color: #403937;
 }
