--- a/style.css
+++ b/style.css
@@ -86,3 +86,62 @@ h1 {
     font-size: 3.2rem;
     color: #403937;
 }
+
+section.filter {
+    margin-top: 3.2rem;
+    padding: 0 2.4rem;
+    display: flex;
+    gap: 1.2rem;
+}
+
+.filter button {
+    padding: 1.2rem 3.2rem;
+    border: 0;
+    background: #7c3aed;
+    border-radius: .5rem;
+    color: white;
+    display: flex;
+    align-items: center;
+    gap: .8rem;
+}
+
+.filter button span {
+    text-shadow: 0rem .4rem 1.6rem rgba(22, 22, 22, 0.1);
+    font-size: 1.4rem;
+}
+
+.filter button ion-icon {
+    font-size: 2.4rem;
+}
+
+.input-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    background: #ffffff;
+    border: 0.07rem solid #e3e3e3;
+    box-shadow: 0rem .4rem 1.6rem rgba(22, 22, 22, 0.1);
+    border-radius: .8rem;
+    padding: 0 2.4rem;
+    flex: 1;
+}
+
+.input-wrapper ion-icon {
+    font-size: 2.4rem;
+    color: #505059;
+}
+
+.input-wrapper input {
+    border: 0;
+    width: 100%;
+    outline: 0;
+}
+
+.input-wrapper:has(:focus) {
+    outline: 0.2rem black solid;
+}
+
+.input-wrapper input::placeholder {
+    font-size: 1.6rem;
+    color: #7c7c8a;
+}
