--- a/style.css
+++ b/style.css
@@ -145,3 +145,63 @@ section.filter {
     font-size: 1.6rem;
     color: #7c7c8a;
 }
+
+section.kanban {
+    display: flex;
+    gap: 4.8rem;
+    padding-top: 3.2rem;
+}
+
+section.kanban>* {
+    flex: 1;
+    padding: 2.4rem;
+}
+
+section.kanban h2 {
+    font-size: 2rem;
+    color: #403937;
+    padding: 2.4rem 0;
+}
+
+.card {
+    padding: 2.4rem;
+    background-color: #ffffff;
+    box-shadow: 0rem 0.4rem 1.6rem #eae2fd;
+    border-radius: 0.8rem;
+    line-height: 130%;
+}
+
+.card h3 {
+    font-size: 1.4rem;
+    color: #403937;
+}
+
+.card p {
+    font-weight: 500;
+    font-size: 1.4rem;
+    color: #756966;
+    margin-top: 1rem;
+}
+
+.card .tags {
+    margin-top: 1rem;
+    display: flex;
+    align-items: center;
+    gap: .8rem;
+    color: #7c3aed;
+    font-weight: 500;
+}
+
+.cards .tags span {
+    font-size: 1.1rem;
+    line-height: 130%;
+    background: #e2d6ff;
+    border-radius: .8rem;
+    padding: .4rem .8rem;
+}
+
+.cards {
+    display: flex;
+    flex-direction: column;
+    gap: 2.4rem;
+}
